remove scripts from ignore. add brew installs

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -11,8 +11,11 @@ set -eufo pipefail
      "ripgrep"
      "wget"
      "zsh" -}}
+
 {{ $casks := list
      "bitwarden"
+     "iterm2"
+     "raycast"
      "spotify"
      "visual-studio-code" -}}
 
