add nvm and claude-code installations

--- a/.chezmoiscripts/run_onchange_before_install_01-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install_01-packages.sh.tmpl
@@ -11,7 +11,11 @@ set -eufo pipefail
      "jq"
      "ripgrep"
      "wget"
-     "zsh" -}}
+     "zsh"
+     "tree"
+     "bat"
+     "fd"
+     "fzf" -}}
 
 {{ $casks := list
      "bitwarden"
