--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,8 +1,12 @@
 {{- $email := promptStringOnce . "email" "Email address" -}}
+{{- $gitName := promptStringOnce . "gitName" "Git name" -}}
+{{- $gitEmail := promptStringOnce . "gitEmail" "Git email address" -}}
 
 data:
-  email: 
-    - {{ $email | quote }}
+  email: {{ $email | quote }}
+  git:
+    name: {{ $gitName | quote }}
+    email: {{ $gitEmail | quote }}
 
 diff:
   exclude:
